@@ -60,10 +60,8 @@ The individuals in this sample are considered to be statistically independent.  
         mxMatrix( type="Full", nrow=1, ncol=1, free=TRUE, values=c(.3333), name="P"),
         mxMatrix( type="Full", nrow=1, ncol=1, free=TRUE, values=c(.3333), name="Q"),
         mxMatrix( type="Full", nrow=1, ncol=1, free=TRUE, values=c(.3333), name="R"),
-    # Algebra for sum of allele frequencies and 1.0 constant for equality constraint
-        mxAlgebra( expression=P+Q+R, name="SumAlleleFreqs"),
-        mxMatrix( type="Unit", nrow=1, ncol=1, name="I"),
-        mxConstraint("I", "=", "SumAlleleFreqs"),
+    # Constraint for sum of allele frequencies to equal 1.0
+        mxConstraint(P+Q+R == 1, name="SumAlleleFreqs"),
     # Matrix of observed data
         mxMatrix( type="Full", nrow=4, ncol=1, values=c(211,104,39,148), name="ObservedFreqs"),
     # Algebra for predicted proportions
